# ChangeLog for x11-misc/lsw
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/lsw/ChangeLog,v 1.12 2014/12/01 13:00:39 jer Exp $

*lsw-0.3 (01 Dec 2014)

  01 Dec 2014; Jeroen Roovers <jer@gentoo.org> +lsw-0.3.ebuild:
  Version bump.

  01 Jun 2013; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Cleanup due bug #151880

  09 Oct 2011; Jeroen Roovers <jer@gentoo.org> -lsw-0.1.ebuild:
  ^

  09 Oct 2011; Markos Chandras <hwoarang@gentoo.org> lsw-0.2-r1.ebuild:
  Stable on amd64 wrt bug #386085

  07 Oct 2011; Jeroen Roovers <jer@gentoo.org> lsw-0.2-r1.ebuild:
  Fix sed script that should fix CFLAGS thanks to ago (bug #386087).

*lsw-0.2-r1 (11 Jul 2011)

  11 Jul 2011; Jeroen Roovers <jer@gentoo.org> -lsw-0.2.ebuild,
  +lsw-0.2-r1.ebuild:
  Install some files too, thanks to Roger (bug #374783).

*lsw-0.2 (20 Jun 2011)

  20 Jun 2011; Jeroen Roovers <jer@gentoo.org> lsw-0.1.ebuild, +lsw-0.2.ebuild:
  Version bump. Do not install nearly empty README.

  25 Oct 2009; Torsten Veller <tove@gentoo.org> metadata.xml:
  Remove coldwind from metadata.xml (#181764)

  10 Oct 2009; Cédric Krier <cedk@gentoo.org> lsw-0.1.ebuild:
  Fix homepage

  30 Sep 2009; Jeroen Roovers <jer@gentoo.org> lsw-0.1.ebuild:
  Respect CC.

  10 Sep 2008; Santiago M. Mola <coldwind@gentoo.org> lsw-0.1.ebuild:
  amd64 stable

*lsw-0.1 (31 May 2008)

  31 May 2008; Santiago M. Mola <coldwind@gentoo.org> +metadata.xml,
  +lsw-0.1.ebuild:
  Initial ebuild, thanks to Cedric Krier.