@@ -1,7 +1,7 @@
 DEFINED_PHASES=compile install prepare
 DEPEND=x11-libs/libX11 x11-proto/xproto
 DESCRIPTION=list window names
-EAPI=4
+EAPI=5
 HOMEPAGE=http://tools.suckless.org/lsw
 KEYWORDS=~amd64 ~x86
 LICENSE=MIT
@@ -9,4 +9,4 @@ RDEPEND=x11-libs/libX11
 SLOT=0
 SRC_URI=http://dl.suckless.org/tools/lsw-0.3.tar.gz
 _eclasses_=multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
-_md5_=19fcd2d497aec7bf39893acc750f9fb9
+_md5_=0811ffc58250786b6b0f17c5c2fb37ea
