@@ -1,16 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST lsw-0.2.tar.gz 2946 SHA256 307dcb49d5fd814ca58e3c7cae06008a0c68343b69847e59ddf0e34a555d5f60
+DIST lsw-0.2.tar.gz 2946 SHA256 307dcb49d5fd814ca58e3c7cae06008a0c68343b69847e59ddf0e34a555d5f60 SHA512 c9d94d1a00761d9a47b952a9a8c909400c671b595a92f5724911f7ef62bdcbef4543337b60912e1ebedb1279a4c3d8562aac87991514eb35cea5f0327710d32a WHIRLPOOL 251614ef39d12286f6bcc8986f126d6e491c3dfd78704e8c3f7de6bd90a76f5f7803cd6a8b97bf3a60614018f53f90413c4ba25df49e2390b55981e99782a090
 DIST lsw-0.3.tar.gz 2723 SHA256 0b3f3ce16eef060df6e0d90327ee82593dfd75281347908698747cfa3f8d0655 SHA512 54f5aeb6d17fe23a2e65fbbf4a7622c194e776261a6f0c04ece54fbf212588ec749d5bf5939a6084997f36468339f5373169234c671211a2b7712c408cf883d8 WHIRLPOOL 2b3fcd30ebf466a0ec0b78b3b9995545f0a24c4720076b5692f166ee2e342a87d85969372f830a1fbbf339cdff1545a6d846f029104f94a7ac03db34f5ca6ee8
 EBUILD lsw-0.2-r1.ebuild 763 SHA256 48441195f7ffea9c23b2d1aa8b1c38539ff3ee519d11df34eb0c47e6496de542 SHA512 154d92da14374a612679416a96d1421af826410cfcff16608df00078903464f47601b81c0f14827f07756c1664dc2ace788b14f457b4014c389b704dcbee4780 WHIRLPOOL 4b2488bb812f9f15a5d77ef348b771ff9790e663ef0b0093365767fecdf9d54e993b24199b0dc6fe14fd1164907213ec44b9810362411e9668651200cc10833b
-EBUILD lsw-0.3.ebuild 708 SHA256 fe03d4d87223edb6d40befda78dfae23463a3d957385f3dd6428d7f34f4a3ea7 SHA512 b9562651b92aaa4dbf7b5b03c93a93b39a95097c347ac02a4d79b86a6e2c6037705307ead9249e552bb9bb7e6f9b1d6af43baf1373d4041546cc323268aa153a WHIRLPOOL ccdead6dd059d52d8d43ea885026732aba1bd0226a18e48e5bfadddefe10827863ea9e7daa681fd4bc5bb5964ad1838895d1e3153b058873a7175e1cfa1a2d86
-MISC ChangeLog 1533 SHA256 8f5409f055d06b480eb0318c9e93f6e1fe57a8a1d3352adf5783b3c26c72d4de SHA512 329106e4fde775ec78309603b953719c0cafc3abba0587caebdc0e08410dc0f4147c17bb2f904d41d07ec5792121346fb7ce3fb31de0ce12d418e52f98d1cb4d WHIRLPOOL 925025511bac611a480e160840abda25e1f5ce8cd74fc58e7742ba4ae0e7a4af2da8b2fbedb94ceff505497a433f485d9f77ee7b7d64691a9f7e6c8f3bdfb8d4
+EBUILD lsw-0.3.ebuild 766 SHA256 b0e5e0e8927ec0f15bf675f96bcafdbd14e4424fd880789d26225e165ce0c217 SHA512 721389ccf5dbe36ec392936fdd5407bf391f6d460a428a73676ab44ce29be18bc365e4c485ae3d7ffb1963c7a5b9c22bb1e965028548d4fb423a47d186752f1e WHIRLPOOL d5c00127cdc39eab4fc43c8fe772000c2a45c3f619be7b068c3d6821e278ae14c9a6d42ed1d1aa49ccd63d8e38c5443666b389f550b79eac9831736e07a186cd
+MISC ChangeLog 1628 SHA256 fc46c9aeb33e04eb99c85b10c020e1bd914acbc2af9675d0b211f0206b5e4693 SHA512 707d437d16dc1f4fd64a5311b9be380afb6281118232c1d21cd0bffa2424ee1ae02a34a0447153570709a77764da6153ab6baaa3a4f40510ba45f825b6c0e350 WHIRLPOOL 83755a39aced5903cf2246b0faef8c7e812fd3a1f50d7d907202601bd4da0655f1ed0a84b2dc0896014828208ac539f261f80f975e1f10bf4dd051f698acbf9e
 MISC metadata.xml 167 SHA256 63163ddb9082af2890999b3c825b2d21df911f59611694e0e077e75a12bf7241 SHA512 381c3c70deed443ca617d0535541542579acffb8dde5f577acf789380f0cdec6d395fa6a45483978648fa2d4e9dab13a441ebdc95664f5f414efbcc812705754 WHIRLPOOL f4a9e5a69adee7e8ee1e5e7ba1b4b860c5060a80db845e0c7f12c96ab44a86dc81adb6aff76c5130b4ab2ffe5ea18f0a5afc9d87a61177d99a8fc9f49d7e9d6f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlR8ZngACgkQVWmRsqeSphO7lQCeNydIoMcGHSjVKh/pUX+SE6xt
-FEQAni8HO/jCtTJssJ/xm9/9PmkW3TpI
-=Dv0x
+iEYEAREIAAYFAlTIpfcACgkQVWmRsqeSphOvlACfRW1uskbhznbOrfoFPw0S56vb
+zEkAn0TmVBX52Mk3XSz/8GCouevURaQq
+=Z3C9
 -----END PGP SIGNATURE-----
