@@ -1,9 +1,8 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/lsw/lsw-0.3.ebuild,v 1.1 2014/12/01 13:00:39 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/lsw/lsw-0.3.ebuild,v 1.2 2015/01/28 09:03:49 jer Exp $
 
-EAPI="4"
-
+EAPI=5
 inherit toolchain-funcs
 
 DESCRIPTION="list window names"
@@ -13,7 +12,6 @@ SRC_URI="http://dl.suckless.org/tools/${P}.tar.gz"
 LICENSE="MIT"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
-IUSE=""
 
 RDEPEND="x11-libs/libX11"
 DEPEND="${RDEPEND}
@@ -24,6 +22,10 @@ src_prepare() {
 		-e '/^CC/d' \
 		-e '/^CFLAGS/{s| -Os||;s|=|+=|}' \
 		-e '/^LDFLAGS/{s|=|+=|;s| -s||}' || die
+	sed -i \
+		-e 's|^\t@|\t|g' \
+		-e '/^\techo/d' \
+		Makefile || die
 }
 
 src_compile() {
