@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/lsw
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/lsw/ChangeLog,v 1.12 2014/12/01 13:00:39 jer Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/lsw/ChangeLog,v 1.13 2015/01/28 09:03:49 jer Exp $
+
+  28 Jan 2015; Jeroen Roovers <jer@gentoo.org> lsw-0.3.ebuild:
+  Make compiler calls visible.
 
 *lsw-0.3 (01 Dec 2014)
 
